--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -39,6 +36,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+client/node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -67,6 +65,8 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+
+.DS_Store
 
 # dotenv environment variables file
 .env
